--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -55,7 +55,7 @@
 						<a class="nav-link" [routerLink]="['/app/editProfile']" (click)="toggleCollapsed()">Mi Perfil</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" [routerLink]="'.'" (click)="singOut()">Cerrar Sesión</a>
+						<a class="nav-link" [routerLink]="'/'" (click)="singOut()">Cerrar Sesión</a>
 					</li>
 				</ul>
 
