Cambios de links

--- a/src/app/codeverse/pages/project-workspace/project-workspace.component.html
+++ b/src/app/codeverse/pages/project-workspace/project-workspace.component.html
@@ -1,4 +1,4 @@
-<app-navbar [folderId]="projectDetail.parentFolder" [isWorkspace]="workspace"></app-navbar>
+<app-navbar [isWorkspace]="workspace"></app-navbar>
 
 <div class="container-fluid">
 
