--- a/src/app/codeverse/components/editor/editor.component.css
+++ b/src/app/codeverse/components/editor/editor.component.css
@@ -23,8 +23,8 @@
 }
 
 .editor {
-	/* background-color: #3A506B; */
-	/* color: white; */
+	background-color: #3A506B;
+	color: white;
 	padding: 0.5rem;
 	height: 100%;
 }
@@ -65,7 +65,7 @@ textarea {
 	width: 100%;
 	height: 100%;
 	resize: none;
-	/* background-color: #3A506B; */
-	/* color: white; */
+	background-color: #3A506B;
+	color: white;
 	border: 1px #3A506B;
 }
