Obtención de valores desde modal

--- a/src/app/codeverse/components/snippet/snippet.component.html
+++ b/src/app/codeverse/components/snippet/snippet.component.html
@@ -4,14 +4,21 @@
 	</button>
 </div>
 <div class="modal-body">
-	<input type="text" #nameValue class="form-control" placeholder="Ingrese un valor">
+	<input type="text" #nameValue class="form-control mb-2" placeholder="Nombre de Snippet" (input)="handleInputChange()">
 
-	<div class="feedback" *ngIf="isNameValid === false">
+	<div class="feedback mb-3" *ngIf="isNameValid === false">
+		Valor no válido
+	</div>
+
+	<textarea class="form-control mb-2" rows="10" #snippetValue (keydown)="handleTabKey($event)" (input)="handleInputChange()"></textarea>
+
+	<div class="feedback mb-3" *ngIf="isSnippetValid === false">
 		Valor no válido
 	</div>
 
 </div>
 <div class="modal-footer">
 	<button type="button" class="btn btn-secondary close" (click)="dismiss('Cerrar')">Cerrar</button>
-	<button type="button" class="btn btn-primary save" (click)="close(nameValue.value)">Guardar</button>
+	<button type="button" class="btn btn-primary save"
+		(click)="close(nameValue.value, snippetValue.value)">Guardar</button>
 </div>
