Cambio de placeholder

--- a/src/app/codeverse/components/create-new-action-modal/create-new-action-modal.component.html
+++ b/src/app/codeverse/components/create-new-action-modal/create-new-action-modal.component.html
@@ -4,7 +4,7 @@
 		</button>
 	</div>
 	<div class="modal-body">
-		<input type="text" #inputValue class="form-control" placeholder="Ingrese un valor">
+		<input type="text" #inputValue class="form-control" placeholder="Nombre de Elemento">
 
 		<div class="feedback" *ngIf="isValid === false">
 			Valor no válido
