--- a/src/app/codeverse/components/create-new-action-modal/create-new-action-modal.component.html
+++ b/src/app/codeverse/components/create-new-action-modal/create-new-action-modal.component.html
@@ -13,5 +13,6 @@
 </div>
 <div class="modal-footer">
 	<button type="button" class="btn btn-secondary close" (click)="dismiss('Cerrar')">Cerrar</button>
-	<button type="button" class="btn btn-primary save" (click)="close(inputValue.value)">Guardar</button>
+	<button type="button" class="btn btn-primary save" [disabled]="isValid === false"
+		(click)="close(inputValue.value)">Guardar</button>
 </div>
