Implementación de Vista de Snippet

--- a/src/app/codeverse/components/snippet-detail-modal/snippet-detail-modal.component.html
+++ b/src/app/codeverse/components/snippet-detail-modal/snippet-detail-modal.component.html
@@ -5,11 +5,11 @@
 </div>
 <div class="modal-body">
 
-	<h4>
-		OSAASM
-	</h4>
-	<div>
-		WEFWEF
+	<h5>
+		{{ snippet.name }}
+	</h5>
+	<div style="background-color: black; color: white;">
+		{{ snippet.code }}
 	</div>
 
 </div>
