--- a/src/app/codeverse/pages/edit-profile/edit-profile.component.css
+++ b/src/app/codeverse/pages/edit-profile/edit-profile.component.css
@@ -1,16 +1,98 @@
-.box{
-    height: 80vh;
-    border: 1px solid #0B132B;
-    border-radius: 10%;
-    padding: 5%;
+.main {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 93.9vh;
 }
 
-.circle-border{
-    border: 1px solid #0B132B;
-    border-radius: 50%;
+.customCard {
+	display: flex;
+	flex-direction: column;
+	padding: 2rem;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 5px;
+	border-color: #0B132B;
+	background-color: #f1f1f1;
+	font-size: 1rem;
 }
 
-.btn-custom{
-    background-color: #0B132B;
+.customCard>.row {
+	display: flex;
+	justify-content: center;
+	text-align: center;
+}
+
+.customCard>.row>div {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+}
+
+.btn {
+	font-size: 0.9rem;
+	width: 100%;
+}
+
+.btn-principal {
+	background-color: #0B132B;
 	color: white;
+}
+
+.btn-facebook {
+	background-color: #1877F2;
+	color: white;
+}
+
+.btn-facebook>fa-icon {
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+}
+
+.bigText {
+	font-size: 2.5em;
+}
+
+/* Sección */
+
+#secondSection{
+	padding-left: 5%;
+	padding-right: 5%;
+}
+
+p{
+	margin: 0;
+}
+
+.whiteText {
+	color: white;
+}
+
+.planCustomCard {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
+	padding: 1rem;
+	height: 40vh;
+	border-style: solid;
+	border-width: 1px;
+	border-radius: 5px;
+	border-color: #0B132B;
+	background-color: #f1f1f1;
+	font-size: 1rem;
+}
+
+.tittle{
+	font-size: 1.5rem;
+	font-weight: bold;
+}
+
+hr {
+	width: 100%;
+	background-color+: #0B132B;
+}
+
+.text {
+	width: 100%;
+	height: 70%;
 }
